chore: UseCase tests (#142)
* chore: UseCase tests

* chore: ViewModel tests

* chore: turbine and mockk fix

* chore: ViewModel test

* chore: reducer part 1

* chore: reducer part 2

* chore: reducer fixes

* chore: reducer done

* chore: huge refactor