@@ -50,6 +50,11 @@ android {
     hilt {
         enableAggregatingTask = true
     }
+
+    tasks.withType(Test::class) {
+        jvmArgs("-Dnet.bytebuddy.experimental=true", "-XX:+EnableDynamicAgentLoading")
+    }
+
 }
 
 dependencies {
@@ -78,9 +83,9 @@ dependencies {
 
     androidTestImplementation(libs.androidx.junit)
     androidTestImplementation(libs.androidx.espresso.core)
-    testImplementation(libs.junit.jupiter.api)
     testImplementation(libs.coroutines.test)
     debugImplementation(libs.androidx.compose.ui.tooling)
-    testRuntimeOnly(libs.junit.jupiter.engine)
-    testImplementation(libs.kotlin.test.junit5)
+    testImplementation(libs.mockk)
+    testImplementation(libs.junit.jupiter)
+    testImplementation(libs.turbine)
 }
